modified package.json and added vercel.json to run generate-embeddings

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "generate-embeddings": "node scripts/generate-embeddings.js",
+    "build": "npm run generate-embeddings",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
