--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "generate-embeddings": "node scripts/generate-embeddings.js",
-    "prebuild": "mkdir -p data",
+    "prebuild": "node scripts/setup-build.js",
     "build": "npm run generate-embeddings",
     "postbuild": "node -e \"const fs=require('fs'); if(!fs.existsSync('./data/website_chunks.json')){process.exit(1)}\"",
     "vercel-build": "npm run build && npm run postbuild",
