refactor: organize routes and serve static files in index.js; update vercel.json for chatbot routing

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,13 @@
       "dest": "/api/$1"
     },
     {
+      "src": "/chatbot",
+      "dest": "/public/chatbot.html"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.js"
     }
