--- a/vercel.json
+++ b/vercel.json
@@ -2,25 +2,27 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "npm run vercel-build",
-        "outputDirectory": "."
-      }
+      "src": "public/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "/index.js"
     },
     {
-      "src": "/chatbot",
+      "src": "/chatbot/?",
       "dest": "/public/chatbot.html"
     },
     {
-      "handle": "filesystem"
+      "src": "/(.*)",
+      "dest": "/public/$1",
+      "continue": true
     },
     {
       "src": "/(.*)",
